--- a/JavaBean Compenents - Digital Circuits/PartG/nbproject/project.properties
+++ b/JavaBean Compenents - Digital Circuits/PartG/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PartE.jar
+dist.jar=${dist.dir}/PartG.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.ProvidedCircuitComponents.jar=lib/ProvidedCircuitComponents.jar
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=parte.PartE
+main.class=partg.PartG
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
